# SmartMirror-Center-Display

./: README.md  SmartMirror-Center-Display.js  node_helper.js
cplusplus/: CMakeLists.txt  main.cpp  main.h
python_scripts/: center-display-combine-threaded.py  center-display-combine-threaded2.py  center-display-combine.py  center-display-combine_stdio.py  webstream.py
python_scripts/templates/: index.html
